tests/typing/errors/bad_poly_arity/under_application.zf

val f : pi a b. a -> b -> prop.

goal f int 5 6.

